# fitboard

./: .gitignore  LICENSE  Readme.md  pyproject.toml  start_app.sh
fitboard/: __init__.py  dashboard.py  ui_elements.py
tests/: test_fitboard.py
