[tool.poetry]
name = "fitboard"
version = "0.1.0"
description = "Dashboard for viewing cycling FIT files"
authors = ["Thorben Menne <mennthor@aol.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^2.0.0"
flask = "^1.1.2"
dash = "^1.18.1"
dash-bootstrap-components = "^0.11.1"
fitdecode = "^0.7.0"
flask_caching = "^1.9.0"
matplotlib = "^3.3.3"
markupsafe = "2.0.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
